# ComfyUI-Grounding

./: .gitignore  README.md  __init__.py  comfy-test.toml  grounding_init.py  index.html  install.py  nodes.py  prestartup_script.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: PAGES_SETUP.md  requirements-ci.txt
.github/workflows/: lint.yml  publish.yml  test-real-models.yml  test-unit.yml  test-windows.yml
12/: index.html
13/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
24/: index.html
25/: index.html
26/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
38/: index.html
39/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
44/: index.html
45/: index.html
46/: index.html
47/: index.html
48/: index.html
49/: index.html
50/: index.html
51/: index.html
52/: index.html
54/: index.html
55/: index.html
56/: index.html
57/: index.html
models/: .gitignore
nodes/: __init__.py
nodes/config/: __init__.py  bbox_models.py  mask_models.py
nodes/florence2/: __init__.py  detector.py  loader.py  params.py
nodes/florence2_seg/: __init__.py  detector.py  loader.py  params.py
nodes/grounding_dino/: __init__.py  detector.py  loader.py  params.py
nodes/owlv2/: __init__.py  detector.py  loader.py  params.py
nodes/sa2va/: __init__.py  detector.py  loader.py  params.py
nodes/sam2/: __init__.py  load_model.py  loader.py  params.py  segmentation.py
nodes/utils/: __init__.py  cache.py  conversions.py  drawing.py
nodes/visualizer/: __init__.py  bbox_visualizer.py  params.py
nodes/yolo_world/: __init__.py  detector.py  loader.py  params.py
tests/: README.md  conftest.py  create_comparison.py  generate_index_page.py  generate_test_gallery.py  smoke_test.py
tests/integration_real/: test_florence2_real.py  test_grounding_dino_real.py  test_owlv2_real.py  test_sa2va_real.py  test_yolo_world_real.py
tests/unit/: test_cache.py  test_conversions.py  test_input_validation.py  test_model_registry.py  test_node_registration.py
web/js/: grounding_dynamic.js
workflows/: Example.json  batch_normal_grounding.json  batch_processing_sam2.json  mask_grounding.json  normal_grounding.json
