[project]
name = "grounding"
description = "Grounding for dummies, simplest workflow"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependencies for ComfyUI-Grounding", "# For GroundingDINO, MM-GroundingDINO, and OWLv2 (HuggingFace transformers)", "transformers>=4.30.0", "timm>=0.9.0", "# For YOLO-World", "ultralytics>=8.2.0", "# Image processing (usually already installed with ComfyUI)", "# pillow>=10.0.0", "# Optional: supervision for advanced visualization", "# supervision>=0.16.0"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Grounding"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/wiki"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Grounding"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

