[project]
name = "comfyui-grounding"
description = "Object grounding / detection and segmentation nodes for ComfyUI with GroundingDINO, OWLv2, Florence-2, YOLO-World, SAM2, and SA2VA support"
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"

# Core dependencies for ComfyUI-Grounding
dependencies = [
    # For GroundingDINO, MM-GroundingDINO, and OWLv2 (HuggingFace transformers)
    "transformers>=4.30.0",
    "timm>=0.9.0",

    # For YOLO-World
    "ultralytics>=8.2.0",

    # For model downloads and SAM2
    "hf_transfer",
    "huggingface_hub>=0.20.0",

    # For fine-tuning
    "peft",

    # Configuration and utilities
    "pyyaml>=6.0",
    "tqdm>=4.65.0",

    # Core PyTorch (usually already installed with ComfyUI)
    "torch>=2.0.0",
    "torchvision",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Grounding"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/wiki"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/issues"

# Comfy Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "ComfyUI-Grounding"
Icon = ""
