[project]
name = "comfyui-grounding"
description = "Object grounding/detection and segmentation nodes. Simplest workflow. A unified interface to benchmark 33+ models on background removal, object grounding and segmentation tasks. Switch between and use GroundingDINO, OWLv2, Florence-2, YOLO-World, SAM2 and SA2VA effortlessly. All nodes support batches!"
version = "1.0.1"
license = {file = "LICENSE"}
requires-python = ">=3.10"

# Core dependencies for ComfyUI-Grounding
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Grounding"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/wiki"
"Bug Tracker" = "https://github.com/PozzettiAndrea/ComfyUI-Grounding/issues"

# Comfy Registry configuration
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "ComfyUI-Grounding"
Icon = ""
